# Multi-Agent-AI-Coding-Review-Research-Platform

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
pep-8/mcp_python_toolbox/: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
pep-8/mcp_python_toolbox/src/mcp_python_toolbox/: __init__.py  __main__.py  server.py
pep-8/mcp_python_toolbox/src/mcp_python_toolbox/core/: __init__.py  code_analyzer.py  code_executor.py  file_operations.py  project_manager.py
src/agent/: agent.py  coder_agent.py  intent_detector_agent.py  prompts.py  research_agent.py  review_agent.py
src/models/: model.py
src/repository/: database.py  error_repository.py  schema.py
src/router/: router.py
src/service/: code_service.py
src/utils/: api_response.py  constants.py  helpers.py
src/utils/exceptions/: custom_app_exception.py  error_codes.py
